name:                haskell-bench-game
version:             0.1.0.0
synopsis:            Pwn the Alioth Computer Language Benchmark Game with Haskell
description:         Please see README.md
homepage:            http://github.com/jamesdbrock/haskell-bench-game
license:             BSD3
author:              James Brock
maintainer:          jamesbrock@gmail.com
build-type:          Simple
cabal-version:       >=1.2

source-repository head
  type:     git
  location: https://github.com/jamesdbrock/fannkuch-redux

-- regex-dna Haskell GHC #2
-- regex-dna-02 +RTS -N4 -H250M -RTS 0 < resources/fasta-06.5000000
executable regex-dna-02
  hs-source-dirs:     src
  main-is:            regex-dna-02.hs
  ghc-options:        -fllvm -O2 -XBangPatterns -threaded -rtsopts -w
  build-depends:      base,parallel,regex-pcre-builtin,bytestring,array

-- regex-dna Haskell GHC #2
-- Benchmark regex-dna-02-criterion
executable regex-dna-02-criterion
  hs-source-dirs:     src
  main-is:            regex-dna-02-criterion.hs
  ghc-options:        -fllvm -O2 -XBangPatterns -threaded -rtsopts -Wall
  build-depends:      base,parallel,regex-pcre-builtin,bytestring,array,criterion

-- Test-Suite regex-dna-02-test
-- regex-dna-02 +RTS -N4 -H250M -RTS 0 < resources/regexdna-input.txt

-- fasta Haskell GHC #6
-- fasta-06 +RTS -N4 -RTS 25000000 > resources/fasta-06.25000000
-- fasta-06 +RTS -N4 -RTS 5000000 > resources/fasta-06.5000000
executable fasta-06
  hs-source-dirs:     src
  main-is:            fasta-06.hs
  ghc-options:        -fllvm -O2 -XBangPatterns -threaded -rtsopts -XOverloadedStrings
  build-depends:      base,bytestring

-- k-nucleotide-01 +RTS -N4 -K2048M -RTS 0 < resources/fasta-06.25000000
executable k-nucleotide-01
  hs-source-dirs:     src
  main-is:            k-nucleotide-01.hs
  ghc-options:        -fllvm -O2 -XBangPatterns -threaded -rtsopts -XOverloadedStrings -funbox-strict-fields
  build-depends:      base,bytestring

executable k-nucleotide-candidate
  hs-source-dirs:     src
  main-is:            k-nucleotide-candidate.hs
  ghc-options:        -fllvm -O2 -XBangPatterns -threaded -rtsopts -XOverloadedStrings -funbox-strict-fields
  build-depends:      base,bytestring,hashtables
